<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PublishClassNoticeActivity">

    <include layout="@layout/toolbar_common"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/grade_select"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_18"/>

                <Spinner
                    android:id="@+id/s_select_grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dropDownVerticalOffset="?attr/actionBarSize"
                    android:prompt="@string/please_select_grade"/>
            </LinearLayout>

            <include layout="@layout/horizontal_divider_line_1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/class_select"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_18"/>

                <Spinner
                    android:id="@+id/s_select_class"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dropDownVerticalOffset="?attr/actionBarSize"
                    android:prompt="@string/please_select_class"/>
            </LinearLayout>

            <include layout="@layout/horizontal_divider_line_1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/notice_level"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_18"/>

                <Spinner
                    android:id="@+id/s_select_notice_level"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dropDownVerticalOffset="?attr/actionBarSize"
                    android:entries="@array/class_notice_level"
                    android:prompt="@string/please_select_notice_level"/>
            </LinearLayout>

            <include layout="@layout/horizontal_divider_line_1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/notice_title"
                    android:textColor="#333333"
                    android:textSize="@dimen/sp_18"/>

                <EditText
                    android:id="@+id/et_notice_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_title_content"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textSize="@dimen/sp_18"/>
            </LinearLayout>

            <include layout="@layout/horizontal_divider_line_1"/>

            <EditText
                android:id="@+id/et_notice_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/bg_content_detail"
                android:gravity="top"
                android:hint="@string/please_input_notice_content"
                android:inputType="none"
                android:minHeight="@dimen/dp_100"
                android:padding="@dimen/dp_2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_select_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:drawableTop="@drawable/ic_add_pic"
                    android:gravity="center"
                    android:text="@string/upload_pic"
                    android:textColor="@color/register_yellow_red"/>

                <Button
                    android:id="@+id/btn_confirm_publish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    android:background="@drawable/bg_page_btn"
                    android:text="@string/confirm_publish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"/>

                <CheckBox
                    android:id="@+id/cb_push_notice_or_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notice_or_not"
                    android:textColor="@color/register_yellow_red"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
