<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/selector_square_click"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="#333333"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_01"
        android:background="#F4F4F4"/>

    <TextView
        android:id="@+id/btn_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/selector_square_click"
        android:gravity="center"
        android:text="@string/choose_from_album"
        android:textColor="#333333"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="#F4F4F4"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/selector_square_click"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#333333"/>
</LinearLayout>
