<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SubmitFaultActivity">

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/fault_class"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18"/>

        <EditText
            android:id="@+id/et_fault_class"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_input_fault_class"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="#333333"/>
    </LinearLayout>

    <include layout="@layout/horizontal_divider_line_1"/>

    <EditText
        android:id="@+id/et_fault_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/bg_content_detail"
        android:gravity="top"
        android:hint="@string/please_input_fault_content"
        android:inputType="none"
        android:minHeight="@dimen/dp_140"
        android:padding="@dimen/dp_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:drawableTop="@drawable/ic_add_pic"
            android:gravity="center"
            android:text="@string/upload_pic"
            android:textColor="@color/register_yellow_red"/>

        <Button
            android:id="@+id/btn_confirm_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/bg_page_btn"
            android:text="@string/confirm_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>
</LinearLayout>
